--- a/package.json
+++ b/package.json
@@ -11,23 +11,26 @@
   "dependencies": {
     "apexcharts": "^3.45.2",
     "flatpickr": "^4.6.13",
+    "jsonwebtoken": "^9.0.2",
     "jsvectormap": "^1.5.3",
+    "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-hook-form": "^7.51.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5"
   }
 }
